--- a/solution-code/views/layouts/main-layout.ejs
+++ b/solution-code/views/layouts/main-layout.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h1><%= title %></h1>
+      <h1> <a href="/"> <%= title %> </a> </h1>
     </header>
 
     <%- body -%>
