--- a/starter-code/views/index.ejs
+++ b/starter-code/views/index.ejs
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<p> Welcome to <%= title %>. </p>
+
+<nav>
+  <ul>
+    <li> <a href="/signup"> Sign Up </a> </li>
+    <li> <a href="/login"> Log In </a> </li>
+    <li> <a href="/launderers"> Find a Launderer </a> </li>
+    <li> <a href="/dashboard"> See Dashboard </a> </li>
+    <li> <a href="/logout"> Log Out </a> </li>
+  </ul>
+</nav>
