--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,8 +1,13 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url("https://autisable.com/wp-content/uploads/2015/03/happy_laundry-976211.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
