--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,4 @@
-<p>Welcome to {{title}}</p>
+<p>Welcome to {{title}} {{user.username}}</p>
 <nav>
   <ul>
     <li> <a href="/signup"> Sign Up </a> </li>
@@ -6,5 +6,7 @@
     <li> <a href="/launderers"> Find a Launderer </a> </li>
     <li> <a href="/dashboard"> See Dashboard </a> </li>
     <li> <a href="/logout"> Log Out </a> </li>
+
+
   </ul>
 </nav>
