--- a/starter_code/views/laundry/launderers.hbs
+++ b/starter_code/views/laundry/launderers.hbs
@@ -3,7 +3,7 @@
 <ul>
   {{#each launderers}}
     <li>
-      <h3> {{ this.name }} </h3>
+      <h3> {{ this.username }} </h3>
       <p> Fee: ${{ this.fee }} </p>
 
       <a href="/launderers/{{ this._id }}">
