--- a/starter_code/views/layout.hbs
+++ b/starter_code/views/layout.hbs
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <header>
-      <h1> <a href="/"> {{title}} </a> </h1>
-    </header>
-    {{{body}}}
-    <footer>
-      <p> Made with &hearts; at Ironhack. </p>
-    </footer>
-    <script src='/javascripts/script.js' />
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <header>
+    <h1>
+      <a href="/"> {{title}} </a>
+    </h1>
+  </header>
+  {{{body}}}
+  <footer>
+    <p> Made with &hearts; at Ironhack by MOMENTUM TEAM. </p>
+  </footer>
+  <script src='/javascripts/script.js' />
+</body>
+
 </html>
