Do second iteration

--- a/starter_code/views/partials/menu.hbs
+++ b/starter_code/views/partials/menu.hbs
@@ -11,10 +11,13 @@
     <ul class="navbar-nav my-lg-0">
       {{#if user}}
         <li class="nav-item">
-          <a class="nav-link" href="/#">Laundries</a>
+          <a class="nav-link" href="/laundry/dashboard">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
+          <a class="nav-link" href="/laundry/launderers">Find a Launderer</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/laundry/launderer-profile">Profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
