--- a/starter_code/public/stylesheets/style.css
+++ b/starter_code/public/stylesheets/style.css
@@ -11,7 +11,13 @@ input, button, input:focus, button:focus :focus {
 ul {
   list-style: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 1em; }
+  ul li {
+    display: inline-block;
+    margin-right: 1em; }
+    ul li:last-child {
+      margin-right: 0; }
 
 .container {
   width: 80%;
