--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -22,6 +22,14 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-bottom: 1em;
+  li {
+    display: inline-block;
+    margin-right: 1em;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 .container {
