--- a/starter_code/views/laundry/dashboard.hbs
+++ b/starter_code/views/laundry/dashboard.hbs
@@ -1,18 +1,19 @@
 <h2> Your laundry Dashboard </h2>
 
-<ul>
-  <li> <a href="/launderers"> Find a Launderer </a> </li>
-  <li> <a href="/logout"> Log Out </a> </li>
-</ul>
+{{#if user.isLaunderer}}
+  <h3> You are a launderer </h3>
 
+  <p>Your laundering fee is<b>${{ user.fee }}.</b></p>
 
-<h3> Want to become a launderer? </h3>
+{{else}}
+  <h3> Want to become a launderer? </h3>
 
-<form action="/launderers" method="post">
-  <div>
-    <label for="fee-input"> Set your fee </label>
-    <input type="number" name="fee" id="fee-input">
-  </div>
+  <form action="/laundry/launderers" method="post">
+    <div>
+      <label for="fee-input"> Set your fee </label>
+      <input type="number" name="fee" id="fee-input">
+    </div>
 
-  <button> Become a Launderer </button>
-</form>
+    <button class="addBut">Become a Launderer</button>
+  </form>
+{{/if}}
