--- a/starter_code/views/auth/login.hbs
+++ b/starter_code/views/auth/login.hbs
@@ -1,30 +1,22 @@
-<h2> Log In </h2>
+<div class="formContainer">
+  <h2> Log In </h2>
 
-{{#if errorMessage}}
-  <p class="error-message">
-    {{ errorMessage }}
-  </p>
-{{/if}}
+  {{#if errorMessage}}
+  <p class="error-message">{{ errorMessage }}</p>
+  {{/if}}
 
-<form action="/login" method="post">
-  <div>
-    <label for="email-input"> Email </label>
-    <input type="email" name="email" id="email-input"
-      placeholder="e.g., xena@warrior.company">
-  </div>
+  <form action="/login" method="post">
+    <div class="email">
+      <label for="email-input">Email</label>
+      <input type="email" name="email" id="email-input" placeholder="e.g., xena@warrior.company">
+    </div>
+    <div class="password">
+      <label for="password-input">Password</label>
+      <input type="password" name="password" id="password-input" placeholder="e.g., ••••••••••••">
+    </div>
 
-  <div>
-    <label for="password-input"> Password </label>
-    <input type="password" name="password" id="password-input"
-      placeholder="e.g., ••••••••••••">
-  </div>
+    <button> Log In </button>
+  </form>
 
-  <button> Log In </button>
-</form>
-
-<p>
-  Don't have an account?
-  <a href="/signup">
-    Create an account.
-  </a>
-</p>
+  <p>Don't have an account?<a href="/signup">Create an account.</a></p>
+</div>
