--- a/starter_code/views/laundry/dashboard.hbs
+++ b/starter_code/views/laundry/dashboard.hbs
@@ -1,42 +1,35 @@
 <h2> Your laundry Dashboard </h2>
 
-<ul>
-  <li> <a href="/launderers"> Find a Launderer </a> </li>
-  <li> <a href="/logout"> Log Out </a> </li>
-</ul>
-
 {{#if currentUserInfo.isLaunderer}}
-  <h3> You are a launderer </h3>
-  <p>
-    Your laundering fee is
-    <b>{{ currentUserInfo.fee }}</b>
-  </p>
+<h3> You are a launderer </h3>
+<p>Your laundering fee is <b>${{currentUserInfo.fee}}</b></p>
+
+
+<h3> Pending Pickups </h3>
+  {{#if pickups}}
+    <ul>
+      {{#each pickups}}
+      <li>
+        <h4>{{ this.pickupDate }}</h4>
+
+        <ul>
+          <li> <b>User</b>: {{ this.user.name }} </li>
+          <li> <b>Launderer</b>: {{ this.launderer.name }} </li>
+        </ul>
+      </li>
+      {{/each}}
+    </ul>
+  {{else}}
+    <p>There are no pickups for this user</p>
+  {{/if}}
+
 {{else}}
-
 <h3> Want to become a launderer? </h3>
-
 <form action="/launderers" method="post">
   <div>
     <label for="fee-input"> Set your fee </label>
     <input type="number" name="fee" id="fee-input">
   </div>
-
   <button> Become a Launderer </button>
 </form>
-
 {{/if}}
-
-<h3> Pending Pickups </h3>
-
-<ul>
-{{#each pickups}}
-    <li>
-      <h4> {{ this.pickupDate }} </h4>
-
-      <ul>
-        <li> <b>User</b>: {{ this.user.name }} </li>
-        <li> <b>Launderer</b>: {{ this.launderer.name }} </li>
-      </ul>
-    </li>
-{{/each}}
-</ul>
