--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,9 +1,22 @@
+@mixin transform ($value) {
+	-webkit-transform: $value;
+	-moz-transform: $value;
+	-ms-transform: $value;
+	-o-transform: $value;
+	transform: $value;
+}
+
 @mixin transition {
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   -ms-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
+}
+
+@mixin hover_scale {
+	@include transform(scale(1.1,1.1));
+  @include transition;
 }
 
 body, html {
@@ -18,18 +31,45 @@ input, button, input:focus, button:focus :focus {
   outline: none !important;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 1em;
-  li {
-    display: inline-block;
+a.btnA {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1em;
+  font-weight: 800;
+  padding: .4em;
+  min-width: 10em;
+  height: 2.3em;
+  border-radius: 5em;
+  color: white;
+  background-color: #00B7FF;
+  border: 2px solid transparent;
+  @include transition;
+  &:hover {
+    color: #00B7FF;
+    border: 2px solid #00B7FF;
+    background-color: white;
+    @include hover_scale;
+  }
+  &.gold {
+    background-color: goldenrod;
     margin-right: 1em;
-    &:last-child {
-      margin-right: 0;
+    &:hover {
+      color: goldenrod;
+      border: 2px solid goldenrod;
+      background-color: white;
     }
   }
+}
+
+.bottom {
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
+}
+
+.underline {
+  text-decoration: underline;
 }
 
 .container {
@@ -41,6 +81,22 @@ ul {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 1em;
+    li {
+      display: inline-block;
+      margin-right: 3em;
+      padding: 2em;
+      border: 2px solid rgb(199, 199, 199);
+      border-radius: 1em;
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
   h1 {
     font-weight: bold;
     font-size: calc(1.8vh + 1.8vw + 1.8em);
