--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,6 @@
 <h1>Welcome to {{title}}</h1>
 {{#if user}}
   <h2>Welcome {{user.name}}</h2>
+{{else}}
+  <h2>Please login to see the contents ;)</h2>
 {{/if}}
