--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -86,7 +86,7 @@ a.btnA {
     padding: 0;
     margin: 0;
     margin-bottom: 1em;
-    li {
+    li.launderer {
       display: inline-block;
       margin-right: 3em;
       padding: 2em;
