--- a/starter_code/views/laundry/launderer-profile.hbs
+++ b/starter_code/views/laundry/launderer-profile.hbs
@@ -1,18 +1,19 @@
 <h2>Launderer Profile</h2>
 
-<h3>{{theLaunderer.name}}</h3>
+<h3 class="underline">{{launderer.name}}</h3>
 
-<p>Fee: <b>${{theLaunderer.fee}}</b></p>
+<p>Fee: <b>${{launderer.fee}}</b></p>
 
-<h3>Schedule a Pickup With <i>{{theLaunderer.name}}</i></h3>
+<br>
+<h4>Schedule a Pickup With <i>{{launderer.name}}</i></h4>
 
 <form action="/laundry/laundry-pickups" method="post">
   <div>
     <label for="pickup-date-input">When would you like your laundry picked up?</label>
     <input type="date" name="pickupDate" id="pickup-date-input">
   </div>
-  <input type="hidden" name="laundererId" value="{{theLaunderer._id}}">
+  <input type="hidden" name="laundererId" value="{{launderer._id}}">
   <button class="addBut"> Schedule This Pickup </button>
 </form>
 
-<a class="btnA" href="/laundry/launderers">Find Another Launderer</a>
+<a class="btnA bottom" href="/laundry/launderers">Find Another Launderer</a>
