--- a/starter_code/views/partials/menu.hbs
+++ b/starter_code/views/partials/menu.hbs
@@ -16,9 +16,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/laundry/launderers">Find a Launderer</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/laundry/launderer-profile">Profile</a>
-        </li>
+        {{!-- <li class="nav-item">
+          <a class="nav-link" href="/laundry/launderers/{{@root.user._id}}">Profile</a>
+        </li> --}}
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
