--- a/starter_code/views/laundry/dashboard.hbs
+++ b/starter_code/views/laundry/dashboard.hbs
@@ -23,12 +23,12 @@
 <br>
 <ul>
 {{#each pickups}}
-    <li>
-      <h5>- {{this.pickupDate}}</h5>
-      <ul>
-        <li><b>User</b>: {{this.user.name}}</li>
-        <li><b>Launderer</b>: {{this.launderer.name}}</li>
-      </ul>
-    </li>
+  <li>
+    <h5 class="pickupDate">{{this.pickupDate}}</h5>
+    <ul>
+      <li><b>User</b>: {{this.user.name}}</li>
+      <li><b>Launderer</b>: {{this.launderer.name}}</li>
+    </ul>
+  </li>
 {{/each}}
 </ul>
